Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.8, 6.9, 6.10
-
-
dfa62fc14 (dev)
Description
If the QML loaded by QtQuickView for some reason wants to exit the application, via Qt.quit() as per normal, this does nothing, just the following warning:
Signal QQmlEngine::quit() emitted, but no receivers connected to handle it.
Steps
- Load one of the QtQuickView examples, e.g. qtquickview_java or _kotlin
- Modify a QML button to call Qt.quit() on click
- Click the button.
Attachments
Issue Links
- is required for
-
QTBUG-127834 Testing - Embedded QML CI tests
-
- In Progress
-