Android: QQ4A: Connect QCoreApplication to QQmlEngine::quit signal

Primarily to allow QQ4A auto tests to exit safely, but also in case any
user wishes to use the Qt.quit() QML functionality.

Fixes: QTBUG-132512
Change-Id: Id1b2c7a661b6cc36bc32fdca6040f5ae32c22364
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit dfa62fc1442d713c58226e31f94208b5f3c5c309)